--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ publish = false
 license = "GPL-2.0-only"
 
 [dependencies]
+nanoid = { version = "0.4.0" }
 serde = { version = "1.0.132" }
 jsonwebtoken = { version = "8.1.0" }
 chrono = { version = "0.4.19" }
 md-5 = { version = "0.10.0" }
 data-encoding = { version = "2.3.2" }
-sqlx = { version = "0.5.13", default-features = false, features = ["sqlite", "macros", "migrate", "chrono", "runtime-tokio-rustls"] }
+sqlx = { version = "0.6.1", default-features = false, features = ["sqlite", "macros", "migrate", "chrono", "runtime-tokio-rustls"] }
 uuid = { version = "1.1.1", features = ["v4"] }
 axum = { version = "0.5.6", features = ["headers"] }
 hyper = { version = "0.14.16", features = ["full"] }
@@ -21,7 +22,7 @@ tracing-subscriber = { version = "0.3.11" }
 tracing = { version = "0.1" }
 parking_lot = { version = "0.11.2" }
 envy = { version = "0.4" }
-dotenv = { version = "0.15.0" }
+dotenvy = { version = "0.15.0" }
 anyhow = { version = "1.0.51" }
 serde_json = { version = "1.0.73" }
 futures-util = { version = "0.3.21" }
@@ -30,3 +31,4 @@ hashbrown = { version = "0.12.1" }
 tower-http = { version = "0.3.4", features = ["compression-gzip"] }
 validator = { version = "0.15.0", features = ["derive"] }
 rand = { version = "0.8.5" }
+smartstring = { version = "1.0.1" }
